gitops/clusters/homelab/apps/public/noco-google-connector-site/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: noco-google-connector-site
  namespace: public
spec:
  entryPoints:
    - public-web-secure
  routes:
    - match: Host(`noco-google-connector.deepcraftstudio.com`)
      kind: Rule
      services:
        - name: noco-google-connector-site
          port: 80
  tls:
    certResolver: cloudflare
